[gd_scene load_steps=16 format=2]

[ext_resource path="res://background_espaco.jpg" type="Texture" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://NicoBold-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://buttonhover.png" type="Texture" id=4]
[ext_resource path="res://button.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 357, 6 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 357, 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 21
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=8]
resource_name = "FadeIn"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("YouLostText:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YouLostText/Continuation:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 2.5, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.588, 0.588, 1.0 ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YouLostText:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YouLostText/Continuation:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Win"
length = 3.6
tracks/0/type = "value"
tracks/0/path = NodePath("YouLostText:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YouLostText/Continuation:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 2.5, 3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.701, 0.701, 1.0 ]
}

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 3 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 760 )

[node name="Espaco" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 1.36965, 2.11111 )
texture = ExtResource( 1 )
centered = false

[node name="EnemySpawnTime" type="Timer" parent="."]
wait_time = 1.35

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GameOverArea" type="Area2D" parent="."]
position = Vector2( 0, 760 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameOverArea"]
position = Vector2( 360, 16 )
shape = SubResource( 1 )

[node name="ObjectDestroyer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectDestroyer"]
position = Vector2( 352, -136 )
shape = SubResource( 2 )

[node name="GameOver" type="Node2D" parent="."]

[node name="TryAgainButton" type="TextureButton" parent="GameOver"]
margin_left = 280.0
margin_top = 488.0
margin_right = 424.0
margin_bottom = 536.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )

[node name="TryAgainText" type="Label" parent="GameOver/TryAgainButton"]
margin_right = 144.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
text = "TRY AGAIN"
align = 1
valign = 1

[node name="MenuButton" type="TextureButton" parent="GameOver"]
margin_left = 264.0
margin_top = 552.0
margin_right = 408.0
margin_bottom = 600.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )

[node name="MenuText" type="Label" parent="GameOver/MenuButton"]
margin_right = 144.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 4 )
text = "MENU"
align = 1
valign = 1

[node name="YouLostText" type="Label" parent="GameOver"]
margin_top = 64.0
margin_right = 704.0
margin_bottom = 384.0
custom_fonts/font = SubResource( 5 )
text = "DEFEATED"
align = 1
valign = 1
percent_visible = 0.0

[node name="Continuation" type="Label" parent="GameOver/YouLostText"]
margin_left = 64.0
margin_top = 200.0
margin_right = 640.0
margin_bottom = 272.0
custom_fonts/font = SubResource( 7 )
text = "The aliens are invading. Mankind is doomed."
align = 1
autowrap = true
percent_visible = 0.0

[node name="GameOverFadeIn" type="AnimationPlayer" parent="GameOver"]
anims/FadeIn = SubResource( 8 )
anims/RESET = SubResource( 9 )
anims/Win = SubResource( 10 )

[node name="Points" type="Label" parent="."]
margin_right = 704.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1

[connection signal="timeout" from="EnemySpawnTime" to="." method="_on_EnemySpawnTime_timeout"]
[connection signal="body_entered" from="GameOverArea" to="." method="_on_GameOverArea_body_entered"]
[connection signal="body_entered" from="ObjectDestroyer" to="." method="_on_ObjectDestroyer_body_entered"]
[connection signal="pressed" from="GameOver/TryAgainButton" to="." method="_on_TryAgainButton_pressed"]
[connection signal="pressed" from="GameOver/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="animation_finished" from="GameOver/GameOverFadeIn" to="." method="_on_GameOverFadeIn_animation_finished"]
